change minor things

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,23 @@
-PACKS_BASE_URL="https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/pack/"
-ALL_PACKS_URL="https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/packs.json"
-ALL_CARD_TYPES_URL="https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/types.json"
-ALL_FACTIONS_URL="https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/factions.json"
-ALL_PACK_TYPES_URL="https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/packtypes.json"
-ALL_SETS_URL="https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/sets.json"
-ALL_SET_TYPES_URL="https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/settypes.json"
-ALL_SUBTYPES_URL="https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/subtypes.json"
-CARDS_IMAGES_BASE_URL="https://marvelcdb.com/bundles/cards/"
+PACKS_BASE_URL="https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/pack/"
+ALL_PACKS_URL="https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/packs.json"
+ALL_CARD_TYPES_URL="https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/types.json"
+ALL_FACTIONS_URL="https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/factions.json"
+ALL_PACK_TYPES_URL="https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/packtypes.json"
+ALL_SETS_URL="https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/sets.json"
+ALL_SET_TYPES_URL="https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/settypes.json"
+ALL_SUBTYPES_URL="https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/subtypes.json"
 
-PACKS_BASE_URL_FR ="https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/translations/fr/pack/"
-ALL_PACKS_URL_FR="https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/translations/fr/packs.json"
-ALL_CARD_TYPES_URL_FR = "https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/translations/fr/types.json"
-ALL_FACTIONS_URL_FR= "https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/translations/fr/factions.json"
-ALL_PACK_TYPES_URL_FR="https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/translations/fr/packtypes.json"
-ALL_SETS_URL_FR= "https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/translations/fr/sets.json"
-ALL_SUBTYPES_URL_FR = "https://raw.githubusercontent.com/zzorba/marvelsdb-json-data/master/translations/fr/subtypes.json"
+PACKS_BASE_URL_FR ="https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/translations/fr/pack/"
+ALL_PACKS_URL_FR="https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/translations/fr/packs.json"
+ALL_CARD_TYPES_URL_FR = "https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/translations/fr/types.json"
+ALL_FACTIONS_URL_FR= "https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/translations/fr/factions.json"
+ALL_PACK_TYPES_URL_FR="https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/translations/fr/packtypes.json"
+ALL_SETS_URL_FR= "https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/translations/fr/sets.json"
+ALL_SUBTYPES_URL_FR = "https://raw.githubusercontent.com/clementvp/marvelsdb-json-data/master/translations/fr/subtypes.json"
 
 WANTED_LANG="FR"
 
+CARDS_IMAGES_BASE_URL="https://marvelcdb.com/bundles/cards/"
+
 DATABASE_URL="postgresql://root:root@localhost:3254/mc"
+DATABASE_URL_PRD=""
