change cards schema to add image id and add nhost platform support to up a nhost db and storage

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,11 @@ ALL_SUBTYPES_URL_FR = "https://raw.githubusercontent.com/clementvp/marvelsdb-jso
 WANTED_LANG="FR"
 
 CARDS_IMAGES_BASE_URL="https://marvelcdb.com/bundles/cards/"
+UUID_NAMESPACE="fe90b3a7-85cf-41e8-8feb-8234f2880e50"
 
 DATABASE_URL="postgresql://root:root@localhost:3254/mc"
 DATABASE_URL_PRD=""
+NHOST_SUBDOMAINE=""
+NHOST_REGION=""
+NHOST_ADMIN=""
+NHOST_ADMIN_PASSWORD=""
