--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
   "scripts": {
     "build": "rimraf ./build && tsc",
     "dev": "nodemon src/index.ts",
-    "start": "npm run build && node build/index.js"
+    "start": "npm run build && node build/index.js",
+    "nhost:upload": "nodemon src/nhost/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nhost/nhost-js": "^1.12.0",
     "@prisma/client": "^4.4.0",
     "@types/node": "^18.11.0",
     "directory-tree": "^3.3.1",
     "dotenv": "^16.0.2",
     "jsonfile": "^6.1.0",
     "nodejs-file-downloader": "^4.10.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/jsonfile": "^6.1.0",
