--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ CARDS_IMAGES_BASE_URL="https://marvelcdb.com/bundles/cards/"
 UUID_NAMESPACE="fe90b3a7-85cf-41e8-8feb-8234f2880e50"
 
 DATABASE_URL="postgresql://root:root@localhost:3254/mc"
+DATABASE_URL_NHOST_LOCAL="postgres://postgres:postgres@localhost:7412/postgres"
+NHOST_SUBDOMAIN_LOCAL="localhost"
 DATABASE_URL_PRD=""
 NHOST_SUBDOMAINE=""
 NHOST_REGION=""
